<resources>
    <string name="app_name">빨간맛주식</string>
    <string name="spray_com_reserved">＠spray.com reserved.</string>
    <string name="intro_logo">Intro Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_item_main">오늘의 추천</string>
    <string name="navigation_item_realtime_news">실시간 뉴스</string>
    <string name="navigation_item_theme">테마</string>
    <string name="navigation_item_report">증권사레포트</string>
    <string name="navigation_item_notice">공지사항</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pt_notice_board">공지사항</string>
    <string name="desc_logo_image">로고이미지</string>
    <string name="intro_logo_app_name">빨간맛 주식</string>
    <string name="recommended_item">테마 추천</string>
    <string name="comment_pre_text">공개 댓글을 남겨 주세요.</string>
    <string name="recommended_item_comment"><![CDATA[테마추천 > 댓글영역]]></string>
    <string name="txt_recommend_detail_policy">제공되는 분석 자료는 해당 종목에 대한 참고자료이며, 투자에 대한 책임은\n전적으로 이용자에게 있음을 고지합니다.</string>
    <string name="tx_like_count">조회수</string>
    <string name="txt_like_count">좋아요 수</string>
    <string name="str_view_count">조회수</string>
    <string name="str_yyyyMMddHHmm">yyyy.MM.dd HH:mm</string>
    <string name="str_activity_recommended_item_title">테마 추천</string>
    <string name="str_back_go">뒤로가기</string>
    <string name="str_icon_view_count_desc">조회수 아이콘</string>
    <string name="str_btn_like">좋아요버튼</string>
    <string name="str_member_nickname">회원닉네임</string>
    <string name="str_last_modified_date_diff">작성날짜 DIFF</string>
    <string name="str_tb_recommended_item_title">테마추천</string>
    <string name="txt_do_update">수정하기</string>
    <string name="txt_do_delete">삭제하기</string>
    <string name="txt_do_report_at_menu">신고하기...</string>
</resources>